@@ -3,6 +3,7 @@ plugins {
     id 'groovy'
     id 'java-gradle-plugin'
     id 'maven-publish'
+    id 'jacoco'
 }
 
 def MAIN = "main"
@@ -41,6 +42,16 @@ version(pluginVersion)
 
 repositories {
     mavenCentral()
+    repositories {
+        mavenCentral()
+        maven {
+            url = 'https://maven.pkg.github.com/etendosoftware/com.etendoerp.public.jars'
+            credentials {
+                username = "${githubUser}"
+                password = "${githubToken}"
+            }
+        }
+    }
 }
 
 publishing {
@@ -83,16 +94,17 @@ dependencies {
         exclude group: 'jdom', module: 'jdom'
     }
 
-    testImplementation 'org.codehaus.groovy:groovy-all:3.0.9'
+    implementation ('org.codehaus.groovy:groovy-all:3.0.9')
     testImplementation platform("org.spockframework:spock-bom:2.0-M4-groovy-3.0")
-    testImplementation 'org.spockframework:spock-core'
-    testImplementation 'org.spockframework:spock-junit4'
-    testImplementation 'junit:junit:4.13.1'
-    testImplementation( "com.athaydes:spock-reports:2.0-groovy-3.0" ) {
+    testImplementation('org.spockframework:spock-core')
+    testImplementation('org.spockframework:spock-junit4')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.9.2')
+    testImplementation('org.junit.platform:junit-platform-suite-api:1.9.2')
+    testImplementation('org.junit.platform:junit-platform-suite-engine:1.9.2')
+    testImplementation('com.athaydes:spock-reports:2.0-groovy-3.0') {
         transitive = false // this avoids affecting your version of Groovy/Spock
     }
-    testImplementation 'org.postgresql:postgresql:42.5.4'
-
 }
 
 tasks.withType(Test).configureEach {
@@ -104,16 +116,23 @@ test {
     systemProperty 'com.athaydes.spockframework.report.showCodeBlocks', true
     systemProperty 'nexusUser', project.hasProperty('nexusUser') ? project.nexusUser : System.getenv("NEXUS_USR")
     systemProperty 'nexusPassword', project.hasProperty('nexusPassword') ? project.nexusPassword : System.getenv("NEXUS_PSW")
+    systemProperty 'githubUser', project.hasProperty('githubUser') ? project.githubUser : System.getenv("GITHUB_USER")
+    systemProperty 'githubToken', project.hasProperty('githubToken') ? project.githubToken : System.getenv("GITHUB_TOKEN")
     systemProperty 'test.bbdd.sid', project['test.bbdd.sid']
     systemProperty 'test.bbdd.systemUser', project['test.bbdd.systemUser']
     systemProperty 'test.bbdd.systemPassword', project['test.bbdd.systemPassword']
     systemProperty 'test.bbdd.user', project['test.bbdd.systemUser']
     systemProperty 'test.bbdd.password', project['test.bbdd.systemPassword']
     systemProperty 'test.bbdd.url', project['test.bbdd.url']
-    systemProperty 'org.gradle.jvmargs', '-Xmx2g -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8'
-    environment 'JAVA_HOME', System.getenv('JAVA_HOME')
+    systemProperty 'org.gradle.jvmargs', '-Dfile.encoding=UTF-8'
+    systemProperty 'etendoCoreName', project.hasProperty('etendoCoreName') ? project.etendoCoreName : "etendo-core"
+    systemProperty 'etendoCoreVersion', project.property('etendoCoreVersion')
+    environment 'JAVA_HOME', System.getProperties().get("java.home")
 
-    maxHeapSize = "2048m"
+    maxHeapSize = "8192m"
+    minHeapSize = "1024m"
+    jvmArgs '-XX:+UseG1GC', '-XX:+HeapDumpOnOutOfMemoryError'
+
 }
 
 task upgradePluginVersion() {
@@ -170,5 +189,24 @@ gradlePlugin {
     }
 }
 
-test.onlyIf { false }
+jacoco {
+    toolVersion = "0.8.11"
+}
+
+test {
+    useJUnitPlatform()
+}
+
+task jacocoRootReport(type: JacocoReport) {
+    executionData fileTree(dir: "$buildDir/jacoco", include: "*.exec")
+    sourceDirectories.setFrom(files("src/main/groovy"))
+    classDirectories.setFrom(fileTree(dir: "$buildDir/classes/groovy/main", include: '**/*.class'))
+
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
+test.onlyIf { true }
 
